# xcount

./: Cargo.toml  Contributing.MD  LICENSE  Readme.md  output-2026-06-18-13:47.xlsx  ss.txt  try.sh  ttt  username.txt
src/: appconfig.rs  browser.rs  main.rs  scraper.rs
src/utils/: arg.rs  enity.rs  mod.rs  output.rs  source.rs
