[package]
name = "xcount"
version = "0.1.0"
edition = "2024"

[dependencies]
chromiumoxide = "0.9.1"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
dirs = "6.0.0"
futures = "0.3.32"
rust_xlsxwriter = "0.95.0"
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
