[package]
name = "xcount"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
reqwest = "0.13.4"
rust_xlsxwriter = "0.95.0"
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }

[profile.release]
opt-level = 3        # max speed; "s" = size, "z" = min size
lto = "fat"    # full cross-crate LTO — biggest win, slowest link
codegen-units = 1        # one unit lets LLVM see everything; better opt, slower compile
panic = "abort"  # skip unwind machinery — smaller binary, no cost on panic path
strip = "symbols" # strip debug symbols; use "debuginfo" to keep backtraces
debug = false
overflow-checks = false    # removes bounds checks on integer ops in release
